# neon-mind

./: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: publish-to-auto-release.yml
src/: App.vue  main.ts  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  thumb_protocol.rs  utils.rs
src/components/: MarkdownNode.vue  MindMapNode.vue  OriginNode.vue  UniversalNode.vue
src/components/canvas/: SelectionToolbar.vue
src/components/contents/: ContentImage.vue  ContentLink.vue  ContentMarkdown.vue  autoSpaceExt.ts  smartWordExt.ts
src/composables/: useClipboard.ts  useGlobalInteractions.ts  useGlobalShortcuts.ts  useMindMapShortcuts.ts
src/config/: editorTheme.ts  layoutConfig.ts  markdownCommands.ts
src/services/: clipboardService.ts  fileSystem.ts  layoutService.ts  linkService.ts  projectService.ts
src/services/persistence/: PersistenceManager.ts  ResourceManager.ts
src/services/persistence/adapters/: JsonAdapter.ts
src/stores/: canvasStore.ts  projectStore.ts  uiStore.ts
src/styles/: markdown-theme.css  node-themes.css
src/types/: canvas.ts  model.ts
src/utils/: contentResolver.ts  grid.ts  imageUtils.ts  keyboard.ts  segmentation.ts  transformers.ts  viewportUtils.ts
