[package]
name = "mind-canvas"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mind_canvas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"

fast_image_resize = { version = "5.4.0", features = ["image", "rayon"] }
image = "0.25"                                                           # 或最新版
urlencoding = "2"
sha2 = "0.10"
hex = "0.4"
percent-encoding = "2.3.2"
mime_guess = "2.0.5"
threadpool = "1.8"
num_cpus = "1.0"                                                         # 用于自动检测 CPU 核心数
base64 = "0.21"

[profile.dev.package."*"]
opt-level = 3


[profile.dev]
opt-level = 3 # 优化 fast_image_resize 速度，嫌编译慢可以去掉
